--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
-.App {
+/* .App {
   text-align: center;
+  padding-bottom: 100px;
 }
 
 .App-logo {
@@ -35,4 +36,232 @@
   to {
     transform: rotate(360deg);
   }
+}
+img {
+  height: 200px;
+  width: 200px;
+}
+
+.nav-bar a {
+  text-decoration: none;
+}
+
+.navi-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  padding-top: 10px;
+}
+.navi-bar .list {
+  list-style: none;
+  text-decoration: none;
+  color: #fff;
+  font-weight: 600;
+  background: #61dafb;
+  padding: 2px 4px 4px 4px;
+  border: 0;
+  border-radius: 5px;
+}
+.navi-bar .list:hover {
+  color: aquamarine;
+  background: #282c34;
+}
+
+.about-me {
+  text-align: center;
+}
+.home-page {
+  text-align: center;
+}
+
+.Overlay {
+  height: 100px;
+  width: 200px;
+  background: #61dafb;
+  opacity: 40%;
+  border-radius: 8px;
+  margin-left: 30px;
+  position: relative;
+}
+
+.Alert {
+  position: absolute;
+} */
+/* * {
+  padding: 0;
+  margin: 0;
+} */
+/* h1 {
+  text-align: center;
+  color: #c7bebe;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+.heading-title {
+  text-align: center;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
+.balances {
+  text-align: center;
+}
+.allTasks-tasksCompleted {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  max-width: 50%;
+  justify-content: space-around;
+  margin-left: 25%;
+  border: 1px solid #000;
+}
+
+.tasksCompleted p,
+.allTasks p {
+  font-weight: 800;
+}
+
+.myApp {
+  margin-left: 30%;
+  border: 1px solid #222;
+  height: max-content;
+  border-radius: 5px;
+  border: 0;
+  width: 50%;
+  background: linear-gradient(-100deg, #66bcd4, #1bae96);
+}
+
+.list-tasks ol {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+
+  width: 50%;
+  margin-left: 25%;
+  margin-top: 10px;
+  padding: 5px;
+  flex-direction: column;
+}
+.list-tasks ol li {
+  background: #e2e1e1;
+  margin: 2px;
+  width: 100%;
+  padding: 2px;
+  cursor: pointer;
+}
+.list-tasks h3 {
+  text-align: center;
+}
+.list-tasks ol li span {
+  float: right;
+  margin-right: 4px;
+}
+.add-task {
+  width: 70%;
+  margin: 40px 20px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+fieldset .text input {
+  width: 70%;
+  display: inline-block;
+  margin: 2px;
+  border-radius: 2px;
+  border: 0;
+  padding: 5px;
+}
+
+fieldset .time input {
+  border: 0;
+  border-radius: 2px;
+  padding: 5px;
+}
+fieldset label {
+  width: 10%;
+  font-weight: 500;
+}
+form button {
+  margin-left: 30px;
+  margin-top: 5px;
+  margin-bottom: 0;
+  padding: 5px;
+  border: 0;
+  border-radius: 4px;
+  width: 100px;
+  color: #fff;
+  background: #6060d8;
+  cursor: pointer;
+} */
+
+.revenue-expenses {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-content: center;
+  background: #cee7da;
+  width: 50%;
+  margin-left: 30%;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  padding: 0;
+}
+.revenue-expenses .rev,
+.exp {
+  font-size: 20px;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+h4 {
+  text-align: center;
+}
+.btn {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-content: space-around;
+}
+.btn button {
+  border: 0;
+  padding: 9px;
+  border-radius: 5px;
+  background: #26c774;
+  color: #fff;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.rev {
+  color: #26c774;
+  border-right: #fff 2px solid;
+}
+.exp {
+  color: red;
+  width: 100%;
+}
+
+.details {
+  width: 300px;
+  margin-top: 30px;
+}
+.details input {
+  width: 100%;
+  height: 25px;
+  border: 0;
+  border-radius: 5px;
+  background: #cee7da;
+  margin-left: 40px;
+}
+.details label {
+  margin-left: 40px;
+}
+
+button {
+  margin: 10px;
+}
+
+span {
+  float: right;
+  margin-right: 40px;
 }
